<resources>
    <string name="app_name">AirLine UdeA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Inicio sesión -->
    <string name="iniciarSesion">INICIO DE SESIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crearCuenta">Crear nueva cuenta</string>
    <string name="olvidoContraseña">¿Olvidó su contraseña?</string>

    <!-- Recuperación pass -->
    <string name="recuperacionContrasena">RECUPERACIÓN DE CONTRASEÑA</string>
    <string name="email">Correo electrónico</string>
    <string name="msjRecuperarContrasena">Ingrese el correo electrónico asociado a su nombre de usuario.</string>
    <string name="enviar">ENVIAR</string>

    <!-- Menu -->
    <string name="servicios">SERVICIOS</string>
    <string name="consultarVuelos">Consultar vuelos</string>
    <string name="vuelosGuardados">Vuelos guardados</string>
    <string name="vuelosReservados">Vuelos reservados</string>
    <string name="checkin">Check-in</string>

    <!-- Consultar vuelos -->
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="rango">Seleccione un rango de fechas a consultar</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="consultar">CONSULTAR</string>
    <string-array name="ArrayOrigen">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
    </string-array>

    <string-array name="ArrayDestino">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
    </string-array>

    <string name="seleccionFecha">Presione aquí para escoger su fecha</string>

    <!-- Informacion Vuelos -->
    <string name="lista_vuelos">LISTA DE VUELOS</string>
    <string name="precio">Precio</string>
    <string name="asientos">Asientos disponibles</string>
    <string name="guardarVuelo">GUARDAR VUELO</string>
    <string name="reservarTiquetes">RESERVAR TIQUETES</string>

    <!-- Nueva Cuenta -->
    <string name="nueva_cuenta">NUEVA CUENTA</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="identificacion">Identificación</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="crear_usuario">CREAR USUARIO</string>

    <!-- VUELOS GUARDADOS -->
    <string name="vuelos_guardados">VUELOS GUARDADOS</string>

    <!-- VUELOS RESERVADOS -->
    <string name="wuelos_reservados">VUELOS RESERVADOS</string>

    <!-- CHECKIN -->
    <string name="check-in">CHECKIN</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Consultar vuelos</item>
        <item >Vuelos guardados</item>
        <item >Vuelos reservados</item>
        <item >Check-in</item>
    </string-array>

    <string name="action_example">Example action</string>
    <string name="title_activity_servicios">Servicios</string>
    <string name="title_activity_nueva_cuenta">Nueva Cuenta</string>
    <string name="title_activity_recuperacion_contrasena">Recuperacion Contrasena</string>
    <string name="title_activity_consultar_vuelos">Consultar Vuelos</string>
    <string name="title_activity_vuelos_guardados">Vuelos Guardados</string>
    <string name="title_activity_vuelos_reservados">Vuelos Reservados</string>
    <string name="title_activity_checkin">Checkin</string>
    <string name="title_activity_lista_vuelos">Vuelos</string>
    <string name="title_activity_informacion_vuelo">INFORMACIÓN DE VUELO</string>
</resources>
