<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.joluditru.airline.NuevaCuenta"
    android:background="@mipmap/sesion">

    <TextView
        android:text="@string/nueva_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/LayoutmarginTop"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombres"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:id="@+id/txtNombres"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:id="@+id/txtApellidos"
        android:gravity="center"
        android:layout_marginTop="@dimen/LayoutmarginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identificacion"
        android:textSize="20sp"
        android:inputType="number"
        android:id="@+id/txtIdentificacion"
        android:gravity="center"
        android:layout_marginTop="@dimen/LayoutmarginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nuevo_usuario"
        android:textSize="20sp"
        android:id="@+id/txtUsuario"
        android:gravity="center"
        android:layout_marginTop="@dimen/LayoutmarginTop"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="20sp"
        android:id="@+id/txtCorreo"
        android:gravity="center"
        android:layout_marginTop="@dimen/LayoutmarginTop"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:textSize="20sp"
        android:id="@+id/txtContraseña"
        android:gravity="center"
        android:layout_marginTop="@dimen/LayoutmarginTop"
        android:layout_marginBottom="20dp"/>

        <Button
            android:text="@string/crear_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:textColor="@color/blanco"
            android:textSize="25sp"
            android:id="@+id/btnGuardarVuelo"/>

</LinearLayout>
