<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.joluditru.aerolnea.InicioSesion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:text="@string/iniciarSesion"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/LayoutmarginTop"
        android:gravity="center"
        android:id="@+id/txtIniciarSesion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/usuario"
        android:textSize="30sp"
        android:id="@+id/txtUsuario"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/contraseña"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/txtContraseña"
        android:layout_marginTop="40dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightButton"
        android:text="@string/entrar"
        android:id="@+id/btnEntrar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@color/primary"
        android:textColor="@color/blanco"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightButton"
        android:text="@string/crearCuenta"
        android:id="@+id/btnCrearCuenta"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@color/primary"
        android:textColor="@color/blanco"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/olvidoContraseña"
        android:id="@+id/lblOlvidoContraseña"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/accent"/>

</LinearLayout>
