<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.joluditru.airline.RecuperacionContrasena">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/recuperacionContrasena"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msjRecuperarContrasena"
        android:gravity="center"
        android:id="@+id/lblMensajeRecContrasena"
        android:layout_gravity="center_horizontal" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/txtCorreo"
        android:hint="@string/email"
        android:textSize="30sp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/enviar"
        android:id="@+id/btnEnviar"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@color/primary"
        android:textColor="@color/blanco"/>

</LinearLayout>
