<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.joluditru.airline.ConsultarVuelos"
    android:background="@mipmap/menu">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.24"
        android:layout_marginTop="30dp">

        <TextView

            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/origen"
            android:textAlignment="textEnd"
            android:id="@+id/lblOrigen" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinnerOrigen"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:entries="@array/ArrayOrigen"
            android:popupBackground="@color/primary"
            android:popupElevation="@android:dimen/thumbnail_width" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.24"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/destino"
            android:id="@+id/lblDestino" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:id="@+id/spinnerDestino"
            android:layout_marginStart="40dp"
            android:entries="@array/ArrayDestino"
            android:background="@drawable/rectangle"
            android:popupBackground="@color/primary"
            android:popupElevation="@android:dimen/thumbnail_width" />
    </LinearLayout>


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rango"
        android:id="@+id/lblRango"
        android:textColor="@color/negro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/desde"
            android:id="@+id/lblDesde" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtDesde"
            android:layout_weight="1"
            android:hint="@string/seleccionFecha"
            android:textSize="14sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hasta"
            android:id="@+id/lblHasta" />


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtHasta"
            android:layout_weight="1"
            android:hint="@string/seleccionFecha"
            android:textSize="14sp"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightButton"
        android:text="@string/consultar"
        android:id="@+id/btnConsultar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@color/primary"
        android:textColor="@color/blanco"/>

</LinearLayout>
