<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.joluditru.airline.ListaVuelos"
    android:background="@mipmap/menu">

    <TextView android:text="@string/lista_vuelos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/LayoutmarginTop"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/LayoutmarginTop">


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listaConsultaVuelos"
            android:layout_weight="1" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightButton"
            android:text="@string/guardarVuelo"
            android:id="@+id/btnGuardarVuelo"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@color/primary"
            android:textColor="@color/blanco"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightButton"
            android:text="@string/reservarTiquetes"
            android:id="@+id/btnReservarTiquete"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@color/primary"
            android:textColor="@color/blanco"/>


    </LinearLayout>

</LinearLayout>
